# yeet

./: .gitignore  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  default.nix  devenv.nix  yeet.db
.github/workflows/: nix_check.yml  rust_check.yml
.sqlx/: query-025d155d67b2aad6e9e55f3329b35d6e42f1864c7c015ff2173f0ffc336b3d1d.json  query-041b7394ea032211cc26162900ab65ec226384961bb25a6ad97762182a0ae342.json  query-065f04e429c6f9b5b763df5bc9395e83a7813f5222ce07232a3d01f600c08378.json  query-0966295262b91740cd781c064cccdf55ee72799afc52464183ca6fbfd9dc4fc7.json  query-0cb1d5dc03eaaf9cc88e767b26cf00bc15811416730305bbdf10eb9f0fbb2e65.json  query-0ee7ae3ab3933f482c93062c0f3b8824d6cb3e4c7fc9fd490a5ad2697beba73a.json  query-0fca639f41039887b12300f541181baf4ec9c61c76040ec49e3c206e30786627.json  query-1091b84f2d0c0b4beeb971db55ab48d5f79278107ff1d99211b96d9e1e0e3386.json  query-13e50940f5efcba8e9734cfa8dc4bba865127cc74d67e4a0aa83a6c28b57a7b7.json  query-151aeebc50c3397a2150e67584391d1a90b6a5ba1a628ea8e3b5fd55701f693a.json  query-157316bc41cdcde680a5c554db6b7cb0e42d8a6cec9344ec56c1ddabd7da5a7e.json  query-1658904d803cf97e5be9bc9c8eb5f155dae293a8abcb00319eea019edc9dec40.json  query-197eb86e862936cb8558a4093a0256ffbbeb2987273331c31281416a559aac26.json  query-1fc0eb8ad4e657595a4090cc0b70b21cf0436871b0f18b8113dffac9b27ae097.json  query-246a1ae31071af077d9cab637c91c30e686a15392fd2dcc149d1db569e60a590.json  query-24b2dc33161637a30aed54a829413c93312db6ae9a7447cd889281f00e05ac72.json  query-28efce5329f5c75b6d21b0f930f458dfe866d84e04c2d68613f6366cd1fa0538.json  query-2908f89d01519e8d417c13fc4336ff78ebe14067d246d031b8e0e268cfada0d1.json  query-2a45a2fe64b016b0dacf2441ade0e10ba0e94ced1b98b63c681cb03db71b5a02.json  query-34092e416a6a0cfbe349ba55fdd1589a6d99ada99eaebba73169008942379e16.json  query-34e512598f850d194a38ec980375ccd748c75ca3ccf9a6e3cff3c142459e86fe.json  query-3732ab6e53c6b5ba3a25bb8688b7fd45210d37efbcf5aed9d39e0994a0d39ec0.json  query-3dcbfb9521412ad8f44892ce773dcf4e77ded1a5f068a266ac02c8e6486bb9de.json  query-4081b548a04e5a4da9f6c8217a2aa0f224a33b2a082e6da8a38aaf7a9a77a395.json  query-4359acb1512311ae9b00bdee335e30000c2821220f8d01837caa92edfcdf6245.json  query-43e21cf4976b0246cf5ab76a4543a408aaa792db69bec696e3c356a8d99e20a8.json  query-4468be066da425df2f5592c8aa8843b1e7178e716e2737839c03df64e7dc4d1a.json  query-4700815f7de8f25b96edb78bb7c5356ba0fa92f234d61a399fe2a1b536132599.json  query-502ac4c28c335c77a38d9463360e77b78f9431b081d2cc81d0e63fa59d8abd7f.json  query-574a7357e238302b99d23b4c48eccf44a17567158ff4d1e4ae346ebfa7d752cc.json  query-5a30837e0ea83a454cf70cdbbe636f21dc23cffc8f763b728f8ecf1a1a2a63a3.json  query-5fd7f4d9fb00d05e61884a8313865e2c30f4170feadf8a0d7527f62b2be4376e.json  query-5fdc0eeb0b0639c7947d8ba0eefaac949c6f1bb15dcecacf9fa342c74d226699.json  query-66829833e30275392780ba13569d376650d3058f22361c258226e94ea260e54f.json  query-6bd76fc8547c15a5d97fd149fb190ebf0cd2d39f78c3c63fedea58e55159e618.json  query-6f6922d3fc5091d5c84e2bf6ca3f47243a36eb063aef88fcfc196e5564c36da0.json  query-709ef04d14251fd9135a70ad9b8e27847028843b2c1763c419bd2e1621a59de1.json  query-74d4d7eb5215d0478a8391be4c1dc6758f548d541bc9dfb56b24613f6ede6cff.json  query-764821480df88e4472568f87f1f9bc78581692dedb918b784afa04d228f893d5.json  query-7f82cf772de72f3547fd3b6ff7221a91baca4a1fed3d971c813310d09a062e23.json  (+45 more)
book/src/: SUMMARY.md
book/src/developer/: auth.md  secrets.md
defectdojo/: Cargo.toml
defectdojo/src/: asset.rs  assets.rs  engagement.rs  finding.rs  lib.rs  organziation.rs  scan.rs  test.rs
migrations/: 20260309063529_verification_create.sql  20260309140305_hosts_create.sql  20260309160120_secrets.sql  20260311124129_versions_history.sql  20260311155240_update_history.sql  20260311155648_state_history.sql  20260311163818_keys.sql  20260316113828_users.sql  20260323105343_osquery_node.sql  20260323142315_osquery_distributed_query.sql  20260323142316_osquery_distributed_query.sql  20260325085922_tags.sql  20260326154314_access_view.sql  20260428081527_secret_artifacts.sql
modules/nixos/: yeet.nix  yeetd.nix
osquery-tls/: Cargo.toml
osquery-tls/src/: lib.rs
splunk_hec/: Cargo.toml
splunk_hec/src/: lib.rs
yeet-agent/: Cargo.toml  build.rs
yeet-agent/src/: agent.rs  cachix.rs  cli_args.rs  display.rs  lib.rs  main.rs  nix.rs  notification.rs  polkit.rs  section.rs  section_impls.rs  server.rs  server_cli.rs  status.rs  systemd.rs  varlink.rs
yeet-agent/src/cli/: approve.rs  common.rs  detach.rs  host.rs  hosts.rs  osquery.rs  publish.rs  secret.rs  tag.rs  user.rs
yeet-agent/src/sig/: ssh.rs
yeet-api/: Cargo.toml
yeet-api/src/: auth.rs  httpsig.rs  key.rs  lib.rs  secret.rs
yeet-api/src/auth/: action.rs
yeet-api/src/routes/: artifact.rs  health.rs  host.rs  key.rs  osquery.rs  secret.rs  system.rs  tag.rs  user.rs  verify.rs
yeet-api/tests/: yeet-api.rs
yeet-server/: Cargo.toml  yeetd.service
yeet-server/src/: defectdojo.rs  error.rs  httpsig.rs  lib.rs  main.rs  secret_store.rs  splunk_sender.rs  state.rs
yeet-server/src/db/: artifact.rs  hosts.rs  keys.rs  osquery.rs  secrets.rs  tag.rs  user.rs  verification.rs
yeet-server/src/routes/: artifact.rs  detach.rs  host.rs  key.rs  osquery.rs  secret.rs  system.rs  tag.rs  update.rs  user.rs  verify.rs
yeet-server/tests/: defectdojo.rs  yeet-server.rs
