[workspace]
members = ["osquery-tls", "splunk_hec","yeet-agent", "yeet-api", "yeet-server"]
resolver = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[workspace.package]
version = "0.9.10-21"
categories = ["Configuration"]
edition = "2024"
repository = "https://github.com/yeet-rs/yeet"
keywords = ["nix", "deployment", "pull-based"]
license = "AGPL-3.0-or-later"
readme = "README"

[workspace.dependencies]
httpsig-hyper = "0.0.24"
reqwest = { version = "0.13", features = ["json"] }
jiff = {version = "0.2", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["serde", "pkcs8"] }
http = "1.3.1"
ssh-key = { version = "0.6", features = ["serde", "ed25519"] }
thiserror = "2.0"
error_set = "0.9.1"
serde_json_any_key = {version = "2.0"}
url = { version = "2.5", features = ["serde"] }
age = "0.11.2"
axum-test = "19.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"]}
serde_json = "1.0"
osquery-tls = {path = "./osquery-tls"}
colored = "3.1.1"
tabled = "0.20.0"
splunk_hec = {path = "./splunk_hec"}
log = "0.4"


[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "deny"
non-ascii-idents = "deny"
missing_docs = "allow"                                  # Remove in 1.0

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
blanket_clippy_restriction_lints = "allow"
missing_docs_in_private_items = "allow"
implicit_return = "allow"
question_mark_used = "allow"
separated_literal_suffix = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
missing_trait_methods = "allow"
shadow_reuse = "allow"
pub_with_shorthand = "allow"
single_call_fn = "allow"
self_named_module_files = "allow"
absolute_paths = "allow"
module_name_repetitions = "allow"
ref_patterns = "allow"
multiple_crate_versions = "allow"
default_trait_access = "allow"
shadow_unrelated = "allow"
iter_over_hash_type = "allow"
missing-inline-in-public-items = "allow"
arbitrary_source_item_ordering = "allow"
allow_attributes_without_reason = "allow"
pub_use = "allow"
# TODO: remove this in future
missing_errors_doc = "allow"
exhaustive_structs = "allow"
exhaustive_enums = "allow"
impl_trait_in_params = "allow"
cfg_not_test = "allow" # Auth gets excluded in tests - we test auth in the api tests
expect_used = "allow" # as long as there is a reason -> also not that bad in axum
default_numeric_fallback = "allow" # is just really verbose
semicolon_inside_block = "allow"
cast_possible_truncation = "allow" # it is still visible by `as`
cast_sign_loss = "allow"
as_conversions = "allow"
pattern_type_mismatch = "allow" # I am too dumb for this
verbose_file_reads = "allow"
doc_paragraphs_missing_punctuation = "allow"
field_scoped_visibility_modifiers = "allow"
