[package]
name = "defectdojo"
version = "0.1.0"
categories.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
description = "defectdojo api bindings"
keywords = ["defectdojo"]
categories = ["api-bindings"]


[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
