[package]
name = "defectdojo"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "defectdojo api bindings"
keywords = ["defectdojo"]
categories = ["api-bindings"]


[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
url.workspace = true
bon = "3.9.1"

[dev-dependencies]
tokio.workspace = true


[lints]
workspace = true
