[package]
name = "osquery-tls"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
indexmap = { version = "2.13.0", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
