[package]
name = "splunk_hec"
description = "Splunk bindings for osquery data"
version.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
indexmap = { version = "2.13.0", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
url.workspace = true
jiff.workspace = true
log.workspace = true
osquery-tls.workspace = true


[lints]
workspace = true
