[package]
version.workspace = true
name = "yeet"
categories.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
description = "Pull-based NixOs deployment agent"

[dependencies]
serde_json = "1.0"
api = { path = "../yeet-api", package="yeet-api"}
notify-rust = "4.11"
clap = { version = "4.5", features = ["derive","string"] }
env_logger = "0.11"
tokio = { version = "1.49", features = ["full"] } # TODO: maybe switch to smoll?

figment = { version = "0.10", features = ["toml", "env"] }
xdg = "3.0.0"
similar = { version = "2.7.0", features = ["unicode"] }
backon = "1.6.0"
rootcause = "0.12"
tempfile = "3.23.0"
shadow-rs = { version = "1.5", default-features = false }
zlink = { version = "0.4.0", features= ["idl", "introspection"] }
futures-util = "0.3.31"
nix = {version = "0.31", features = ["user"]}
inquire = "0.9.1"
ssh2-config = "0.7"
zbus_polkit = "5.0.0"
zbus = "5.13.2"

age.workspace = true
httpsig-hyper.workspace = true
reqwest.workspace = true
jiff.workspace = true
serde.workspace = true
http.workspace = true
ed25519-dalek = { workspace = true , features = ["serde", "pem", "pkcs8"]}
ssh-key.workspace = true
thiserror.workspace = true
url.workspace = true
tabled.workspace = true
colored.workspace = true
log.workspace = true

# TODO: ssh-agent-client-rs = "1.1.2"

[build-dependencies]
shadow-rs = "1.5"

[lints]
workspace = true
