[package]
name = "yeet-api"
version.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Pull-based NixOs deployment api"

[lints]
workspace = true

[features]
hazard = ["dep:sqlx"]

[dependencies]
ahash = { version = "0.8.12", features = ["std"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"], optional = true }


reqwest.workspace = true
httpsig-hyper.workspace = true
jiff.workspace = true
serde.workspace = true
ed25519-dalek.workspace = true
http.workspace = true
ssh-key.workspace = true
thiserror.workspace = true
serde_json_any_key.workspace = true
error_set.workspace = true
url.workspace = true
age.workspace = true

[dev-dependencies]
axum-test.workspace = true
sqlx.workspace = true
tokio = { version = "1.47", features = ["macros"] }
yeetd = {path = "../yeet-server"}
