[package]
name = "yeetd"
version = "0.4.2"
edition = "2024"
categories = []
keywords = ["nix", "deployment", "pull-based"]
repository = "https://github.com/Srylax/yeet"
license = "AGPL-3.0-or-later"
readme = "README.MD"
description = "Pull-based NixOs deployment server"

[lints]
workspace = true

[features]
test-server = ["dep:axum-test"]

[dependencies]
axum = {version = "0.8", features = ["macros"]}
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
api = { path = "../yeet-api", package = "yeet-api", features = ["hazard"]}
memmap2 = "0.9"
uuid = { version = "1.10", features = ["v7", "serde"] }
mime = "0.3"
# rand_core = { version = "0.6", features = ["std" ,] }
axum_thiserror = "0.1.0"
rand = "0.10"
age = { version = "0.11.2", features = [] }
curve25519-dalek = "4.1.3"
axum-test = {version = "19.1", optional = true}


httpsig-hyper.workspace = true
jiff.workspace = true
serde.workspace = true
ed25519-dalek = { workspace = true, features = ["serde", "rand_core", "std", "pem"]}
thiserror.workspace = true
serde_json_any_key.workspace = true
jiff-sqlx = { version = "0.1.1", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
futures = "0.3.32"
error_set = "0.9.1"

[dev-dependencies]
paste = "1.0"
axum-test = "19.1"
