[package]
name = "yeetd"
version.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
description = "Pull-based NixOs deployment server"

[lints]
workspace = true


[dependencies]
axum = {version = "0.8", features = ["macros"]}
serde_json = "1.0"
api = { path = "../yeet-api", package = "yeet-api", features = ["hazard"]}
memmap2 = "0.9"
uuid = { version = "1.10", features = ["v7", "serde"] }
mime = "0.3"
# rand_core = { version = "0.6", features = ["std" ,] }
axum_thiserror = "0.1.0"
rand = "0.10"
curve25519-dalek = "4.1.3"
axum-test = {version = "19.1", optional = true}

defectdojo = { path = "../defectdojo", package = "defectdojo"}
tokio.workspace = true
age.workspace = true
httpsig-hyper.workspace = true
jiff.workspace = true
serde.workspace = true
log.workspace = true
ed25519-dalek = { workspace = true, features = ["serde", "rand_core", "std", "pem"]}
thiserror.workspace = true
serde_json_any_key.workspace = true
osquery-tls.workspace = true
splunk_hec.workspace = true
jiff-sqlx = { version = "0.1.1", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["json", "runtime-tokio", "sqlite", "uuid"] }
futures = "0.3.32"
error_set.workspace = true
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
indexmap = { version = "2.13.0", features = ["serde"] }

[dev-dependencies]
paste = "1.0"
axum-test.workspace = true
